// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> Tests should render the component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`<GifExpertApp /> Tests should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Mr Robot"
      key="Mr Robot"
    />
    <GifGrid
      category="X Files"
      key="X Files"
    />
  </ol>
</Fragment>
`;
